--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
 
     <properties>
         <spring.version>4.2.2.RELEASE</spring.version>
+        <!-- maven中配置文件编译时采用的编码 -->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
@@ -19,10 +21,12 @@
             <version>4.11</version>
             <scope>provided</scope>
         </dependency>
+        <!-- lombok插件 -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.16.8</version>
+            <!-- 定义依赖作用范围 -->
             <scope>provided</scope>
         </dependency>
         <!-- spring -->
@@ -74,7 +78,6 @@
             <artifactId>spring-tx</artifactId>
             <version>${spring.version}</version>
         </dependency>
-
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
@@ -106,11 +109,18 @@
             <artifactId>spring-oxm</artifactId>
             <version>${spring.version}</version>
         </dependency>
-
+        <!-- httpServlet请求依赖jar包 -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
         <plugins>
+            <!-- 添加jettyrun服务器插件依赖 -->
             <plugin>
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
@@ -129,13 +139,14 @@
             </plugin>
         </plugins>
         <finalName>springmvcTest</finalName>
-        <resources>
+        <!-- 配置需编译文件目录 -->
+        <!--<resources>
             <resource>
                 <directory>src/main/java</directory>
             </resource>
             <resource>
                 <directory>src/main/resources</directory>
             </resource>
-        </resources>
+        </resources>-->
     </build>
 </project>
