--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,7 +12,7 @@
         <init-param>
             <param-name>contextConfigLocation</param-name>
             <!-- idea的classpath是resources目录 -->
-            <param-value>classpath*:/spring-mvc*.xml</param-value>
+            <param-value>classpath:/spring-mvc.xml</param-value>
         </init-param>
         <!-- 优先级设为1，最高级别，启动容器第一个初始化  -->
         <load-on-startup>1</load-on-startup>
@@ -20,6 +20,6 @@
     <servlet-mapping>
         <servlet-name>springServlet</servlet-name>
         <!-- 拦截所有访问根目录下的url，交给DispatcherServlet处理 -->
-        <url-pattern>/</url-pattern>
+        <url-pattern>/*</url-pattern>
     </servlet-mapping>
 </web-app>
