--- a/pom.xml
+++ b/pom.xml
@@ -138,9 +138,10 @@
                 </configuration>
             </plugin>
         </plugins>
+        <!--  编译部署文件名需要与artifact中out directory一致  -->
         <finalName>springmvcTest</finalName>
         <!-- 配置需编译文件目录，浏览器访问时的都是编译后的文件，所以如果访问的文件没有编译则会找不到资源 -->
-        <resources>
+        <!--<resources>
             <resource>
                 <directory>src/main/java</directory>
             </resource>
@@ -150,6 +151,6 @@
             <resource>
                 <directory>src/main/webapp</directory>
             </resource>
-        </resources>
+        </resources>-->
     </build>
 </project>
