--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,19 @@
             <version>3.1.0</version>
             <!--<scope>provided</scope>-->
         </dependency>
+        <!-- jstl标签库依赖 -->
+        <dependency>
+            <groupId>taglibs</groupId>
+            <artifactId>standard</artifactId>
+            <version>1.1.2</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 
     <build>
