--- a/pom.xml
+++ b/pom.xml
@@ -10,25 +10,12 @@
 
     <properties>
         <spring.version>4.2.2.RELEASE</spring.version>
+        <guava.version>19.0</guava.version>
         <!-- 配置项目源文件编译打包时采用的编码 -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <!--<scope>provided</scope>-->
-        </dependency>
-        <!-- lombok插件 -->
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.16.8</version>
-            <!-- 定义依赖作用范围，provided会导致编译后项目结构classes中没有lib的依赖 -->
-            <!--<scope>provided</scope>-->
-        </dependency>
         <!-- spring -->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -128,6 +115,33 @@
             <artifactId>jstl</artifactId>
             <version>1.2</version>
             <type>jar</type>
+        </dependency>
+        <!-- junit依赖 -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <!--<scope>provided</scope>-->
+        </dependency>
+        <!-- lombok插件 -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.8</version>
+            <!-- 定义依赖作用范围，provided会导致编译后项目结构classes中没有lib的依赖 -->
+            <!--<scope>provided</scope>-->
+        </dependency>
+        <!-- JDK8的并发流库依赖，Mutable等对象 -->
+        <dependency>
+            <groupId>com.aol.simplereact</groupId>
+            <artifactId>cyclops-react</artifactId>
+            <version>1.0.0-RC4</version>
+        </dependency>
+        <!-- google java lib，guava石榴 -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
         </dependency>
     </dependencies>
 
