--- a/pom.xml
+++ b/pom.xml
@@ -156,11 +156,11 @@
             <version>1.1.0.Final</version>
         </dependency>
         <!-- 提供日志管理，一般不与log4j同时使用 -->
-        <dependency>
+        <!--<dependency>
             <groupId>org.jboss.logging</groupId>
             <artifactId>jboss-logging</artifactId>
             <version>3.1.4.GA</version>
-        </dependency>
+        </dependency>-->
     </dependencies>
 
     <build>
