--- a/pom.xml
+++ b/pom.xml
@@ -189,11 +189,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.7.3</version>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20140107</version>
-        </dependency>
+        </dependency>-->
     </dependencies>
 
     <build>
